--- a/html/masukan-transaksi.html
+++ b/html/masukan-transaksi.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>LaundryNow</title>
-	<link rel="stylesheet" type="text/css" href="masukan-transaksi.css">
+	<link rel="stylesheet" type="text/css" href="../css/masukan-transaksi.css">
 </head>
 <body>
 	<ul>
