--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>LaundryNow</title>
-	<link rel="stylesheet" type="text/css" href="landingpage.css">
+	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
 	<ul>
-	  <li><a class="active" href="landingpage.html">LaundryNow</a></li>
-	  <li><a href="beranda.html">Beranda</a></li>
-	  <li><a href="masukan-transaksi.html">Masukan Transaksi</a></li>
-	  <li><a href="data-transaksi.html">Data Transaksi</a></li>
+	  <li><a class="active" href="index.html">LaundryNow</a></li>
+	  <li><a href="html/beranda.html">Beranda</a></li>
+	  <li><a href="html/masukan-transaksi.html">Masukan Transaksi</a></li>
+	  <li><a href="html/data-transaksi.html">Data Transaksi</a></li>
 	  <li style="float:right"><a href="#about">Keluar</a></li>
 	</ul>
 
