--- a/html/data-transaksi.html
+++ b/html/data-transaksi.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<ul>
-	  <li><a class="active" href="landingpage.html">LaundryNow</a></li>
+	  <li><a class="active" href="../landingpage.html">LaundryNow</a></li>
 	  <li><a href="beranda">Beranda</a></li>
 	  <li><a href="masukan-transaksi.html">Masukan Transaksi</a></li>
 	  <li><a href="data-transaksi.html">Data Transaksi</a></li>
