--- a/landingpage.html
+++ b/landingpage.html
@@ -4,11 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>LaundryNow</title>
-	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="css/landingpage.css">
 </head>
 <body>
 	<ul>
-	  <li><a class="active" href="index.html">LaundryNow</a></li>
+	  <li><a class="active" href="landingpage.html">LaundryNow</a></li>
 	  <li><a href="html/beranda.html">Beranda</a></li>
 	  <li><a href="html/masukan-transaksi.html">Masukan Transaksi</a></li>
 	  <li><a href="html/data-transaksi.html">Data Transaksi</a></li>
