--- a/html/data-transaksi.html
+++ b/html/data-transaksi.html
@@ -9,7 +9,7 @@
 <body>
 	<ul>
 	  <li><a class="active" href="../landingpage.html">LaundryNow</a></li>
-	  <li><a href="beranda">Beranda</a></li>
+	  <li><a href="beranda.html">Beranda</a></li>
 	  <li><a href="masukan-transaksi.html">Masukan Transaksi</a></li>
 	  <li><a href="data-transaksi.html">Data Transaksi</a></li>
 	  <li style="float:right"><a href="#about">Keluar</a></li>
